[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "noralizaaa", email = "nabilanoraliza88@gmail.com"},
]
dependencies = ["streamlit>=1.52.2", "tensorflow>=2.20.0", "numpy>=2.2.6", "pillow>=12.0.0", "pandas>=2.3.3", "matplotlib>=3.10.8", "plotly>=6.5.0", "scikit-learn>=1.7.2", "tf-keras>=2.20.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
